used fieldset tag in groups, bugfix checkbox icon on panel collapsed

--- a/src/leaflet-panel-layers.css
+++ b/src/leaflet-panel-layers.css
@@ -38,11 +38,11 @@
 	clear: both;
 }	
 .leaflet-panel-layers-group {
-	margin: 2px 0;
-	padding: 2px 4px;
+	margin: 2px;
 	border: 1px solid rgba(0,0,0,0.3);
 	background: rgba(255,255,255,0.6);
 	border-radius: 3px;
+	position: relative;
 }
 .leaflet-panel-layers-grouplabel {
 	color: rgba(0,0,0,0.5);
@@ -98,4 +98,8 @@
 .leaflet-panel-layers-overlays input {
 	float: right;
 	margin: 4px;
+	display: none;
+}
+.leaflet-panel-layers-expanded .leaflet-panel-layers-overlays input {
+	display: block;
 }
